tests/invalid/foreign_purity_mismatch.err_exp3
foreign_purity_mismatch.m:010: In predicate `pure_with_impure'/1:
foreign_purity_mismatch.m:010:   purity error: predicate is impure.
foreign_purity_mismatch.m:010:   It must be declared `impure' or promised pure.
foreign_purity_mismatch.m:011: In predicate `pure_with_semipure'/1:
foreign_purity_mismatch.m:011:   purity error: predicate is semipure.
foreign_purity_mismatch.m:011:   It must be declared `semipure' or promised
foreign_purity_mismatch.m:011:   pure.
foreign_purity_mismatch.m:013: In predicate `semipure_with_impure'/1:
foreign_purity_mismatch.m:013:   purity error: predicate is impure.
foreign_purity_mismatch.m:013:   It must be declared `impure' or promised
foreign_purity_mismatch.m:013:   semipure.
foreign_purity_mismatch.m:038: Error: foreign clause for predicate
foreign_purity_mismatch.m:038:   `pure_with_impure'/1 has purity impure but
foreign_purity_mismatch.m:038:   that predicate has been declared pure.
foreign_purity_mismatch.m:059: Error: foreign clause for predicate
foreign_purity_mismatch.m:059:   `pure_with_semipure'/1 has purity semipure but
foreign_purity_mismatch.m:059:   that predicate has been declared pure.
foreign_purity_mismatch.m:080: Error: foreign clause for predicate
foreign_purity_mismatch.m:080:   `semipure_with_impure'/1 has purity impure but
foreign_purity_mismatch.m:080:   that predicate has been declared semipure.
foreign_purity_mismatch.m:101: Error: foreign clause for predicate
foreign_purity_mismatch.m:101:   `semipure_with_pure'/1 has purity pure but
foreign_purity_mismatch.m:101:   that predicate has been declared semipure.
foreign_purity_mismatch.m:122: Error: foreign clause for predicate
foreign_purity_mismatch.m:122:   `impure_with_pure'/1 has purity pure but that
foreign_purity_mismatch.m:122:   predicate has been declared impure.
foreign_purity_mismatch.m:143: Error: foreign clause for predicate
foreign_purity_mismatch.m:143:   `impure_with_semipure'/1 has purity semipure
foreign_purity_mismatch.m:143:   but that predicate has been declared impure.
